--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,3 +46,6 @@ flutter:
   uses-material-design: true
   assets:
    - image/kotlin.png
+   - image/electron.png
+   - image/github.png
+   - image/ts.png
